refactoring get API